# PyLibGen

./: .gitignore  README.md  README2.md  check_api.py  libgen-explorer.py  output.csv  pyproject.toml  requirements.txt  setup.py
export_output/: (output)-[05-06-2025]-{21-16-27}.csv  (output)-[05-06-2025]-{21-16-52}.json  (output)-[05-06-2025]-{21-17-31}.html  big java-05-06-2025.html  big java-05-06-2025.json  big java-05-06-2025.txt
libgen_explorer/: __init__.py  api.py  cli.py  database.py  export.py  extraction.py  rating.py
search_logs/: search_log_20250413_174821.txt  search_log_20250413_180346.txt  search_log_20250413_180510.txt
tests/: __init__.py  test_direction.py  test_import.py  test_path.py  test_quick.py
web/: README.md  package-lock.json  package.json  server.js
web/public/: index.html
web/public/css/: search-results-table.css  style.css
web/public/js/: app.js
