[project]
name = "pylibgen"
version = "0.1.0"
description = ""
authors = [
    {name = "h5mota",email = "pocafup@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.28.1)",
    "aiohttp (>=3.8.3)",
    "pandas (>=1.5.0)",
    "numpy (>=1.23.4)",
    "beautifulsoup4 (>=4.9.0)",
    "pymongo (>=4.3.2)",
    "nltk (>=3.7)",
    "scikit-learn (>=1.1.2)",
    "transformers (>=4.23.1)",
    "openpyxl (>=3.0.10)",
    "pyyaml (>=6.0)",
    "pytest (>=7.2.0)",
    "pytest-cov (>=4.0.0)",
    "tqdm (>=4.64.1)",
    "python-dotenv (>=0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
